--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "restify": "^5.1.0"
+    "restify": "^5.1.0",
+    "restify-cors-middleware": "^1.0.1"
   },
   "dependencies": {
     "nodemon": "^1.11.0"
