--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "mysql": "^2.14.1",
     "restify": "^5.1.0",
     "restify-cors-middleware": "^1.0.1"
   },
