--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "mysql": "^2.14.1",
     "restify": "^5.1.0",
-    "restify-cors-middleware": "^1.0.1"
+    "restify-cors-middleware": "^1.0.1",
+    "sha1": "^1.1.1"
   },
   "dependencies": {
     "nodemon": "^1.11.0"
